--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -74,7 +74,13 @@ jobs:
       - name: Upload binary artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
+          name: supercet-arm64
+          path: dist/bundle/
+
+      - name: Upload x64 binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: supercet-x64
           path: dist/bundle/
 
   release:
@@ -90,7 +96,13 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: binaries
+          name: supercet-arm64
+          path: dist/bundle
+
+      - name: Download x64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: supercet-x64
           path: dist/bundle
 
       - name: Get version for tag
@@ -101,11 +113,11 @@ jobs:
           echo "Creating release for version: $VERSION"
 
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.version.outputs.version }}
           files: |
-            dist/bundle/supercet-node22-macos-arm64
-            dist/bundle/supercet-node22-macos-x64
+            dist/bundle/supercet-node22-arm64
+            dist/bundle/supercet-node22-x64
           draft: false
           prerelease: false
