--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebrew-supercet",
   "type": "module",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "esbuild src/index.ts --bundle --minify --platform=node --outfile=dist/supercet.js",
+    "build": "esbuild src/index.ts --bundle --minify --platform=node --outfile=dist/supercet.js --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\")",
     "start": "node dist/supercet.js",
     "bundle": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-arm64,node22-macos-x64",
     "build-bundle": "npm run build && npm run bundle",
