--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebrew-supercet",
   "type": "module",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "esbuild src/index.ts --bundle --minify --platform=node --outfile=dist/supercet.js --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\")",
@@ -16,7 +16,8 @@
     "@hono/node-server": "^1.18.1",
     "hono": "^4.8.12",
     "jsonwebtoken": "^9.0.2",
-    "simple-git": "^3.28.0"
+    "simple-git": "^3.28.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
