--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
   "name": "homebrew-supercet",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "esbuild src/index.ts --bundle --minify --platform=node --outfile=dist/supercet.js --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\") --define:process.env.SUPERCET_URL=\\\"$(grep SUPERCET_URL .env | cut -d '=' -f2)\\\"",
+    "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\") --define:process.env.SUPERCET_URL=$(grep SUPERCET_URL .env | cut -d '=' -f2 | jq -Rr @json)",
+    "bundle:arm64": "pkg package.json --compress GZip --out-path dist/bundle --targets node22-macos-arm64",
+    "bundle:x64": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-x64",
     "start": "node dist/supercet.js",
-    "bundle": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-arm64,node22-macos-x64",
     "build-bundle": "npm run build && npm run bundle",
     "tap:update": "ruby scripts/update-formula.rb",
     "tap:test": "brew install --build-from-source ./Formula/supercet.rb",
-    "tap:uninstall": "brew uninstall supercet"
+    "tap:uninstall": "brew uninstall supercet",
+    "postinstall": "patch-package"
+  },
+  "bin": {
+    "supercet": "dist/supercet.js"
+  },
+  "pkg": {
+    "assets": [
+      "node_modules/**/node-pty/build/Release/pty.node",
+      "node_modules/**/node-pty/build/Debug/pty.node",
+      "node_modules/**/node-pty/build/Release/spawn-helper",
+      "node_modules/**/node-pty/build/Debug/spawn-helper"
+    ]
   },
   "dependencies": {
     "@hono/node-server": "^1.18.1",
     "dotenv": "^17.2.1",
     "hono": "^4.8.12",
     "jsonwebtoken": "^9.0.2",
+    "node-pty": "^1.0.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "simple-git": "^3.28.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.19.10",
     "@yao-pkg/pkg": "^6.6.0",
     "esbuild": "^0.25.8",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
-  },
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+  }
 }
