--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\") --define:process.env.SUPERCET_URL=$(grep SUPERCET_URL .env | cut -d '=' -f2 | jq -Rr @json)",
-    "bundle:arm64": "pkg package.json --compress GZip --out-path dist/bundle --targets node22-macos-arm64",
-    "bundle:x64": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-x64",
+    "bundle:arm64": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-arm64 --output supercet-arm64",
+    "bundle:x64": "pkg dist/supercet.js --compress GZip --out-path dist/bundle --targets node22-macos-x64 --output supercet-x64",
     "start": "node dist/supercet.js",
     "build-bundle": "npm run build && npm run bundle",
     "tap:update": "ruby scripts/update-formula.rb",
@@ -23,7 +23,8 @@
       "node_modules/**/node-pty/build/Debug/pty.node",
       "node_modules/**/node-pty/build/Release/spawn-helper",
       "node_modules/**/node-pty/build/Debug/spawn-helper"
-    ]
+    ],
+    "scripts": "dist/supercet.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.18.1",
