--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\") --define:process.env.SUPERCET_URL=$( ( [ -n \"$SUPERCET_URL\" ] && printf %s \"$SUPERCET_URL\" || grep -s '^SUPERCET_URL=' .env | cut -d '=' -f2- ) | jq -Rr @json )",
     "bundle:arm64": "pkg . --compress GZip --targets node22-macos-arm64 --output dist/bundle/supercet-arm64",
-    "bundle:x64": "pkg . --compress GZip --out-path dist/bundle --targets node22-macos-x64 --output supercet-x64",
+    "bundle:x64": "pkg . --compress GZip --targets node22-macos-x64 --output dist/bundle/supercet-x64",
     "start": "node dist/supercet.js",
     "build-bundle": "npm run build && npm run bundle",
     "tap:update": "ruby scripts/update-formula.rb",
