--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.5",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --define:process.env.SUPERCET_VERSION=$(node -p \"JSON.stringify(require('./package.json').version)\") --define:process.env.SUPERCET_URL=$( ( [ -n \"$SUPERCET_URL\" ] && printf %s \"$SUPERCET_URL\" || grep -s '^SUPERCET_URL=' .env | cut -d '=' -f2- ) | jq -Rr @json )",
+    "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'${SUPERCET_URL:-https://supercet.com}'\"'",
     "bundle:arm64": "pkg . --compress GZip --targets node22-macos-arm64 --output dist/bundle/supercet-arm64",
     "bundle:x64": "pkg . --compress GZip --targets node22-macos-x64 --output dist/bundle/supercet-x64",
     "start": "node dist/supercet.js",
