--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-pty": "^1.0.0",
     "patch-package": "^8.0.0",
+    "prettier": "^3.6.2",
     "simple-git": "^3.28.0",
     "socket.io": "^4.8.1"
   },
