Tweaking github workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -108,9 +108,6 @@ jobs:
             - name: Install deps (postinstall -> patch-package)
               run: npm i --os darwin --cpu ${{ matrix.arch }}
 
-            - name: Rebuild node-pty for this arch
-              run: npm rebuild node-pty --build-from-source --arch=${{ matrix.arch }}
-
             - name: Verify node-pty native assets (portable find)
               shell: bash
               run: |
@@ -127,6 +124,12 @@ jobs:
                   # Set a default SUPERCET_URL if not already set
                   export SUPERCET_URL="${SUPERCET_URL:-https://default-url.example.com}"
                   npm run build
+            - name: Verify node-pty prebuilds exist
+              run: |
+                  set -euo pipefail
+                  ls -la node_modules/node-pty/prebuilds/darwin-arm64 || true
+                  test -f node_modules/node-pty/prebuilds/darwin-arm64/pty.node
+                  test -f node_modules/node-pty/prebuilds/darwin-arm64/spawn-helper
 
             - name: Package single executable (pkg)
               run: |
@@ -135,6 +138,10 @@ jobs:
                   else
                     npm run bundle:arm64
                   fi
+            - name: Smoke test packaged binary on runner
+              run: |
+                  set -euo pipefail
+                  ./dist/bundle/supercet-arm64 --version || true
 
             - name: Upload binary artifact (only on push)
               if: github.event_name == 'push'
