--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.6.11",
+	"version": "0.6.12",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
 		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
@@ -23,10 +23,12 @@
 			"node_modules/**/node-pty/build/Debug/pty.node",
 			"node_modules/**/node-pty/build/Release/spawn-helper",
 			"node_modules/**/node-pty/build/Debug/spawn-helper",
-			"node_modules/**/node-pty/prebuilds/**/*.node",
-			"node_modules/**/node-pty/prebuilds/**/spawn-helper"
+			"node_modules/**/node-pty/prebuilds/darwin-arm64/pty.node",
+			"node_modules/**/node-pty/prebuilds/darwin-arm64/spawn-helper"
 		],
-		"scripts": "dist/supercet.js"
+		"scripts": [
+			"dist/supercet.js"
+		]
 	},
 	"dependencies": {
 		"@anthropic-ai/claude-agent-sdk": "^0.2.22",
