--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.7.1",
+	"version": "0.7.2",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
+		"lint": "prettier --check .",
+		"ts-lint": "tsc --noEmit",
 		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
 		"bundle:arm64": "pkg dist/supercet.js --compress GZip --targets node22-macos-arm64 --output dist/bundle/supercet-arm64 --public-packages node-pty",
 		"bundle:x64": "pkg dist/supercet.js --compress GZip --targets node22-macos-x64 --output dist/bundle/supercet-x64",
